# usb6w485-support-lib

./: .gitignore  CMakeLists.txt  README.md
cmake/: usb6w485lib_config.h.in
src/: CMakeLists.txt
src/comm6w485/: CMakeLists.txt  package.xml
src/comm6w485/include/: comm6w485.hpp  commif.hpp  irqexception.hpp  irqhandle.hpp  irqmanager.hpp
src/comm6w485/src/: comm6w485.cpp  irqexception.cpp  irqhandle.cpp  irqmanager.cpp
src/comm6w485/test/: testlib.cpp
src/hidapi/: CMakeLists.txt  package.xml
src/hidapi/cmake/: FindWinHID.cmake
src/hidapi/test/: testlib.cpp
src/serial/: CMakeLists.txt
src/serial/cmake/: FindLibUSB.cmake
